# C14

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
piadas/: README.md
piadas/.github/workflows/: ci.yml
piadas/src/piadas/: __main__.py
piadas/tests/: test_piadas.py
scripts/: send_email.py
src/piadas/: __main__.py
tests/: test_piadas.py
